--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -33,6 +33,8 @@ dependencies {
     compile('org.springframework.boot:spring-boot-starter-web')
     compile("org.springframework.security:spring-security-ldap")
     compile("org.springframework:spring-tx")
+    // https://mvnrepository.com/artifact/com.google.code.gson/gson
+    compile group: 'com.google.code.gson', name: 'gson', version: '1.7.2'
 //    compile "org.grails.plugins:spring-security-core:2.0.0"
     compile("org.apache.directory.server:apacheds-server-jndi:1.5.5")
     compile project(':bll')
