--- a/bootstrap/build.gradle
+++ b/bootstrap/build.gradle
@@ -27,6 +27,7 @@ war {
 	baseName = 'panel'
 	version = '0.0.1-SNAPSHOT'
 }
+
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
@@ -34,6 +35,7 @@ repositories {
 	mavenCentral()
 	maven { url "https://repo.spring.io/snapshot" }
 	maven { url "https://repo.spring.io/milestone" }
+	mavenLocal()
 }
 
 
