--- a/dal/build.gradle
+++ b/dal/build.gradle
@@ -7,11 +7,13 @@ targetCompatibility = 1.8
 
 repositories {
     mavenCentral()
+    mavenLocal()
 }
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
     compile group: 'org.ldaptive', name: 'ldaptive', version: '1.2.0'
     compile group: 'org.ldaptive', name: 'ldaptive-beans', version: '1.2.0'
+    compile group: 'pl.memleak', name: 'krbadmin', version: '0.0.3'
     compile project(":bll")
 }
