--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -1,11 +1,23 @@
 version 'unspecified'
 
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:1.4.2.RELEASE")
+    }
+}
+
 apply plugin: 'java'
+apply plugin: 'org.springframework.boot'
 
 repositories {
     mavenCentral()
 }
 
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
 
 dependencies {
     compile('org.springframework.boot:spring-boot-starter-security')
