--- a/bootstrap/src/main/resources/krbadmin.properties.example
+++ b/bootstrap/src/main/resources/krbadmin.properties.example
@@ -1,3 +1,3 @@
-krbadmin.jniAbsolutePath=/absolute/path/to/libkadm5_jni-x.y.z.so
+krbadmin.jniAbsolutePath=/home/maxmati/memleak-panel/libkadm5_jni-0.0.3.so
 krbadmin.principal=panel/braintest.memleak.pl
-krbadmin.keytab=path/to/krb5.keytab
+krbadmin.keytab=/home/maxmati/memleak-panel/krb5.keytab
