--- a/dal/build.gradle
+++ b/dal/build.gradle
@@ -14,5 +14,9 @@ dependencies {
     compile group: 'org.ldaptive', name: 'ldaptive', version: '1.2.0'
     compile group: 'org.ldaptive', name: 'ldaptive-beans', version: '1.2.0'
     compile group: 'pl.memleak', name: 'krbadmin', version: '0.0.3'
+    compile group: 'org.hibernate', name: 'hibernate-core', version: '5.2.5.Final'
+    compile group: 'org.postgresql', name: 'postgresql', version: '9.4.1212'
+
     compile project(":bll")
+    compile project(":infrastructure")
 }
