--- a/bootstrap/src/main/resources/ldapconfig.properties
+++ b/bootstrap/src/main/resources/ldapconfig.properties
@@ -2,5 +2,6 @@ ldap.url=ldaps://braintest.memleak.pl
 ldap.query.getUser=(uid={uid})
 ldap.query.getGroup=(cn={cn})
 ldap.query.getAllUsers=uid=*
+ldap.query.getAllGroups=cn=*
 ldap.baseDn.user.default=ou=people,dc=memleak,dc=pl
 ldap.baseDn.group.default=ou=groups,dc=memleak,dc=pl
