Move envelope variables to configuration

--- a/bootstrap/src/main/resources/mail.properties.example
+++ b/bootstrap/src/main/resources/mail.properties.example
@@ -4,3 +4,5 @@ smtp.hostname=smtp.memleak.pl
 smtp.port=25
 smtp.username=memleak
 smtp.password=password
+envelope.sender=panel@memleak.pl
+envelope.createUserSubject=Account created
