Added getting user groups endpoint

--- a/bootstrap/src/main/resources/ldapconfig.properties
+++ b/bootstrap/src/main/resources/ldapconfig.properties
@@ -3,5 +3,6 @@ ldap.query.getUser=(uid={uid})
 ldap.query.getGroup=(cn={cn})
 ldap.query.getAllUsers=uid=*
 ldap.query.getAllGroups=cn=*
+ldap.query.getUserGroups=(member={dn})
 ldap.baseDn.user.default=ou=people,dc=memleak,dc=pl
 ldap.baseDn.group.default=ou=groups,dc=memleak,dc=pl
